(lang dune 3.10)

(name joy)

(generate_opam_files true)

(source
 (github Sudha247/ocaml-joy))

(authors "Sudha Parimala" "Kaustubh Maske Patil")

(maintainers "Sudha Parimala" "Kaustubh Maske Patil")

(license MIT)

(documentation https://url/to/documentation)

(package
 (name joy)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
