(lang dune 3.10)

(name joy)

(generate_opam_files true)

(source
 (github Sudha247/ocaml-joy))

(authors "Sudha Parimala" "Kaustubh Maske Patil")

(maintainers "Sudha Parimala" "Kaustubh Maske Patil")

(license MIT)

(package
 (name joy)
 (synopsis "Tiny creative coding library in OCaml")
 (description "Tiny creative coding library in OCaml")
 (depends ocaml dune graphics))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
