(executable
 (name axes)
 (modules axes)
 (libraries joy))

(executable
 (name ellipse)
 (modules ellipse)
 (libraries joy))

(executable
 (name translate_circle)
 (modules translate_circle)
 (libraries joy))

(executable
 (name translate_rectangle)
 (modules translate_rectangle)
 (libraries joy))

(executable
 (name translate_ellipse)
 (modules translate_ellipse)
 (libraries joy))

(executable
 (name circle_row_joy)
 (modules circle_row_joy)
 (libraries joy))

(executable
 (name rotate)
 (modules rotate)
 (libraries joy))

(executable
 (name line)
 (modules line)
 (libraries joy))

(executable
 (name higher_transforms)
 (modules higher_transforms)
 (libraries joy))

(executable
 (name complex)
 (modules complex)
 (libraries joy))

(executable
 (name polygon)
 (modules polygon)
 (libraries joy))

(executable
 (name circle_packing)
 (modules circle_packing)
 (libraries joy))

(executable
 (name rectangle)
 (modules rectangle)
 (libraries joy))
